--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tienda",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://jc-server-iahj.onrender.com/",
   "private": true,
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.0.0",
